--- a/07_firstProj/index.html
+++ b/07_firstProj/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Color Changer</title>
+    <title>Document</title>
 </head>
-<div class="canvas">
-    <h1>Color Scheme Switcher</h1>
-      <span class="button" id="grey"></span>
-      <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
-      <span class="button" id="yellow"></span>
-</div>
-<script src="first.js"></script>      
+<body>
+    <div>
+        <h1 id="one" class="heading">Welcome to Dom</h1>
+        <h4 id="two" class="heads">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse molestiae repellendus sunt, ipsum, assumenda, vel magni obcaecati illum eius voluptatem quidem ea reiciendis fugiat. Nostrum repellendus voluptatibus omnis fugit veritatis.</h4>
+
+    </div>
+    <ul>
+        <li class="list">one</li>
+        <li class="list">two</li>
+        <li class="list">three</li>
+        <li class="list">four</li>
+        <li>five</li>
+        <li>six</li>
+    </ul>
     
 </body>
 </html>
